# opencv-thrift

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  README.md  continuousIntegration.sh  genHS.sh  updateGeneratedCode.sh
cpp/: CMakeLists.txt
cpp/OpenCVThrift/OpenCV/Core/: CVDef_constants.cpp  CVDef_types.cpp  MatUtil_constants.cpp  MatUtil_constants.h  MatUtil_types.h  Mat_constants.h  Types_constants.h  Types_types.cpp
cpp/OpenCVThrift/OpenCV/Features2D/: Features2D.cpp  Features2D.h  Features2D_constants.h  Features2D_types.cpp  Features2D_types.h
cpp/gen-cpp/: MatUtil.cpp  MatUtil.h  MatUtil_server.skeleton.cpp  mat_constants.cpp  mat_constants.h  mat_types.cpp  mat_types.h
cppLocalhost/: CMakeLists.txt
cppLocalhost/examples/: LocalhostClient.cpp
cppLocalhost/lib/: OpenCVLocalhost.cpp  OpenCVLocalhost.hpp
hs/: .gitignore  HaskellClient.hs  OpenCV.hs  OpenCVThrift.cabal  OpenCVThrift.hs  ThriftTutorial.cabal  configure.sh  installContinuous.sh  testContinuous.sh
hs/OpenCVThrift/: OpenCV.hs
hs/OpenCVThrift/OpenCV/: Core.hs  Features2D.hs
hs/OpenCVThrift/OpenCV/Core/: MatUtil.hs
hs/OpenCVThrift/OpenCV/Core/gen-hs/: CVDef_Consts.hs  MatUtil.hs  MatUtil_Client.hs  MatUtil_Consts.hs  MatUtil_Iface.hs  Mat_Types.hs  Types_Consts.hs  Types_Types.hs
hs/OpenCVThrift/OpenCV/Features2D/: Features2D.hs
hs/OpenCVThrift/OpenCV/Features2D/gen-hs/: Features2D.hs  Features2D_Client.hs  Features2D_Iface.hs  Features2D_Types.hs
hs/OpenCVThrift/gen-hs/: Ports_Consts.hs
hs/lib/: OpenCV.hs
hs/lib/Internal/: Util.hs
hs/lib/OpenCV/Core/: MatUtil.hs
hs/lib/OpenCV/Core/gen-hs/: MatUtil.hs  MatUtil_Client.hs  MatUtil_Consts.hs  MatUtil_Iface.hs  Mat_Types.hs
hs/lib/OpenCV/Features2D/: Features2D.hs
hs/lib/OpenCV/Features2D/gen-hs/: Features2D.hs  Features2D_Client.hs  Features2D_Consts.hs  Features2D_Types.hs
hs/lib/OpenCVThrift/: OpenCV.hs  OpenCVTypes.hs
hs/lib/OpenCVThrift/OpenCV/Core/: MatUtil.hs
hs/lib/OpenCVThrift/OpenCV/Core/gen-hs/: CVDef_Types.hs  MatUtil.hs  MatUtil_Client.hs  MatUtil_Iface.hs  MatUtil_Types.hs  Mat_Consts.hs  Mat_Types.hs
hs/lib/OpenCVThrift/OpenCV/Features2D/: Features2D.hs
hs/lib/OpenCVThrift/OpenCV/Features2D/gen-hs/: Features2D.hs  Features2D_Client.hs  Features2D_Consts.hs  Features2D_Iface.hs
hs/lib/OpenCVThrift/gen-hs/: Ports_Types.hs
hsLocalhost/: .gitignore  OpenCVThriftLocalhost.cabal  buildContinuous.sh
hsLocalhost/examples/: HaskellClient.hs
hsLocalhost/lib/: OpenCVLocalhost.hs
hsWrapper/: HaskellClient.hs  OpenCVTypes.hs
implementation/: CMakeLists.txt  Ports_constants.h  Ports_types.h
implementation/OpenCV/Core/: CVDef_constants.h  CVDef_types.cpp  Conversion.cpp  MatUtil.h  MatUtilHandler.cpp  MatUtil_types.h  Mat_types.cpp  Mat_types.h  Types_constants.cpp  Types_constants.h
implementation/OpenCV/Features2D/: Features2D.cpp  Features2D.h  Features2DHandler.cpp  Features2DHandler.hpp  Features2D_constants.h  Features2D_types.cpp  Features2D_types.h
implementation/OpenCVThrift/: Ports_constants.cpp  Ports_constants.h  Ports_types.cpp
implementation/OpenCVThrift/OpenCV/Core/: CVDef_constants.cpp  CVDef_constants.h  CVDef_types.h  Conversion.cpp  Conversion.hpp  MatUtil.cpp  MatUtil.h  MatUtilHandler.cpp  MatUtilHandler.hpp  MatUtil_constants.cpp  MatUtil_constants.h  MatUtil_types.cpp  MatUtil_types.h  Mat_constants.cpp  Mat_constants.h  Mat_types.cpp  Mat_types.h  Types_constants.cpp  Types_types.cpp  Types_types.h
implementation/OpenCVThrift/OpenCV/Features2D/: Features2D.h  Features2DHandler.cpp  Features2DHandler.hpp  Features2D_constants.cpp  Features2D_types.cpp  Features2D_types.h
implementation/Util/: Conversion.cpp  Conversion.hpp
interface/: CMakeLists.txt  OpenCVServer.cpp  Ports.thrift  generateCPPInterface.sh  opencv.thrift  opencv.thriftier
interface/OpenCV/Core/: Mat.thrift  MatUtil.thrift  Types.thrift
interface/OpenCV/Features2D/: Features2D.thrift
interface/OpenCVThrift/: Ports.thrift
interface/OpenCVThrift/OpenCV/Core/: CVDef.thrift  Mat.thrift  MatUtil.thrift  Types.thrift
interface/OpenCVThrift/OpenCV/Features2D/: Features2D.thrift
interface/modules/core/: mat.thrift
interface/modules/features2d/: features2d.thrift
serverLocalhost/: CMakeLists.txt  OpenCVServer.cpp
