name:           OpenCVThrift 
version:        0.1.0
cabal-version:  >= 1.16
category:       Foreign
build-Type:     Simple

library 
  hs-source-dirs:
    ./
    OpenCVThrift/gen-hs
    OpenCVThrift/OpenCV/Core/gen-hs
    OpenCVThrift/OpenCV/Features2D/gen-hs

  exposed-modules:
    OpenCVThrift.OpenCV.Core.MatUtil
    OpenCVThrift.OpenCV.Features2D.Features2D
    OpenCVThrift.OpenCV

  build-depends:
    base >=4, 
    network, 
    ghc-prim, 
    containers, 
    thrift, 
    vector, 
    unordered-containers, 
    text, 
    hashable, 
    bytestring

  default-language: 
    Haskell2010

  default-extensions:
    DeriveDataTypeable
    ExistentialQuantification
    ConstraintKinds
    UndecidableInstances
    MultiParamTypeClasses
    FunctionalDependencies
    FlexibleInstances

