--
-- Licensed to the Apache Software Foundation (ASF) under one
-- or more contributor license agreements. See the NOTICE file
-- distributed with this work for additional information
-- regarding copyright ownership. The ASF licenses this file
-- to you under the Apache License, Version 2.0 (the
-- "License"); you may not use this file except in compliance
-- with the License. You may obtain a copy of the License at
--
--   http://www.apache.org/licenses/LICENSE-2.0
--
-- Unless required by applicable law or agreed to in writing,
-- software distributed under the License is distributed on an
-- "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
-- KIND, either express or implied. See the License for the
-- specific language governing permissions and limitations
-- under the License.
--

Name:           ThriftTutorial
Version:        0.1.0
Cabal-Version:  >= 1.16
Category:       Foreign
Build-Type:     Simple
Synopsis:       Thrift Tutorial library package

Executable HaskellClient
  Main-is: HaskellClient.hs
  Hs-Source-Dirs:
    ., gen-hs/
  Build-Depends:
    base >=4, network, ghc-prim, containers, thrift, vector, unordered-containers, text, hashable, bytestring
  default-language: Haskell2010
  default-extensions:
    DeriveDataTypeable
