Name:           OpenCVThriftLocalhost
Version:        0.1.0
Cabal-Version:  >= 1.16
Category:       Foreign
Build-Type:     Simple

library 
  Hs-Source-Dirs:
    lib

  exposed-modules:
    OpenCVLocalhost

  Build-Depends:
    base >=4, 
    network, 
    ghc-prim, 
    containers, 
    thrift, 
    vector, 
    unordered-containers, 
    text, 
    hashable, 
    bytestring,
    OpenCVThrift

  default-language: 
    Haskell2010

  default-extensions:
    DeriveDataTypeable
    ExistentialQuantification

--Executable Client
  --Main-is: HaskellClient.hs
  --Hs-Source-Dirs:
    --bin
    ----., 
    ----modules/core,
    ----modules/features2d
  --Build-Depends:
    --OpenCVThrift,
    --base >=4, 
    --network, 
    --ghc-prim, 
    --containers, 
    --thrift, 
    --vector, 
    --unordered-containers, 
    --text, 
    --hashable, 
    --bytestring
  --default-language: 
    --Haskell2010
  --default-extensions:
    --DeriveDataTypeable
    --ExistentialQuantification
