Name:           OpenCVThriftLocalhost
Version:        0.1.0
Cabal-Version:  >= 1.16
Category:       Foreign
Build-Type:     Simple

library 
  Hs-Source-Dirs:
    lib,
    ../hs/lib
    ../hs/lib/OpenCV/Core/gen-hs,
    ../hs/lib/OpenCV/Features2D/gen-hs

  exposed-modules:
    OpenCVLocalhost

  Build-Depends:
    base >=4, 
    network, 
    ghc-prim, 
    containers, 
    thrift, 
    vector, 
    unordered-containers, 
    text, 
    hashable, 
    bytestring
    --OpenCVThrift

  default-language: 
    Haskell2010

  default-extensions:
    DeriveDataTypeable
    ExistentialQuantification
  ghc-options:
    -fglasgow-exts

Executable Client
  Main-is: HaskellClient.hs
  Hs-Source-Dirs:
    bin
    lib
    ../hs/lib
    ../hs/lib/OpenCV/Core/gen-hs
    ../hs/lib/OpenCV/Features2D/gen-hs
    --., 
    --modules/core,
    --modules/features2d
  Build-Depends:
    --OpenCVThrift,
    --OpenCVThriftLocalhost,
    base >=4, 
    network, 
    ghc-prim, 
    containers, 
    thrift, 
    vector, 
    unordered-containers, 
    text, 
    hashable, 
    bytestring
  default-language: 
    Haskell2010
  default-extensions:
    DeriveDataTypeable
    ExistentialQuantification
  ghc-options:
    -fglasgow-exts
