name:           OpenCVThriftLocalhost
version:        0.1.0
cabal-version:  >= 1.16
category:       Foreign
build-type:     Simple

library 
  hs-source-dirs:
    lib
    -- Poor man's project dependency.
    ../hs
    ../hs/OpenCVThrift/gen-hs
    ../hs/OpenCVThrift/OpenCV/Core/gen-hs
    ../hs/OpenCVThrift/OpenCV/Features2D/gen-hs

  exposed-modules:
    OpenCVLocalhost

  build-depends:
    base >=4, 
    network, 
    ghc-prim, 
    containers, 
    thrift, 
    vector, 
    unordered-containers, 
    text, 
    hashable, 
    bytestring
    --OpenCVThrift

  default-language: 
    Haskell2010

  default-extensions:
    DeriveDataTypeable
    ExistentialQuantification
    ConstraintKinds
    UndecidableInstances
    MultiParamTypeClasses
    FunctionalDependencies
    FlexibleInstances

  --ghc-options:
    ---fglasgow-exts

executable Client
  main-is: HaskellClient.hs

  hs-source-dirs:
    examples 
    lib
    -- Poor man's project dependency.
    ../hs
    ../hs/OpenCVThrift/gen-hs
    ../hs/OpenCVThrift/OpenCV/Core/gen-hs
    ../hs/OpenCVThrift/OpenCV/Features2D/gen-hs

  build-depends:
    --OpenCVThrift,
    --OpenCVThriftLocalhost,
    base >=4, 
    network, 
    ghc-prim, 
    containers, 
    thrift, 
    vector, 
    unordered-containers, 
    text, 
    hashable, 
    bytestring

  default-language: 
    Haskell2010

  default-extensions:
    DeriveDataTypeable
    ExistentialQuantification
    ConstraintKinds
    UndecidableInstances
    MultiParamTypeClasses
    FunctionalDependencies
    FlexibleInstances

  --ghc-options:
    ---fglasgow-exts
